# battery-embedded

./: .gitignore  Cargo.toml  build.rs  cbindgen.toml
docs/: zkp_api.md
examples/e2e/: README.md  e2e.c
examples/ffi_c/: Makefile  README.md  e2e.c
include/: battery.h  battery_helpers.h  tfhe_enc.h  tfhe_enc_helpers.h
src/: aes_ctr.rs  ffi.rs  lib.rs  poly.rs  tfhe.rs
src/zkp/: air.rs  constants.rs  generation.rs  mod.rs
